# static-gallery-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  suggestions.md
example/: about.md  index.md  site.conf  styles.css
example/.theme/: homepage.html  image.html  listing.html  page.html
example/.theme/shortcodes/: code.html  gallery.html  image.html
example/blog/: first-post.md  index.md  second-post.md
example/photos/: index.md
src/static_gallery/: __init__.py  builder.py  config.py  metadata.py  model.py  paths.py  render.py  scanner.py  shortcodes.py  sync.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_features_v1.py  test_feed.py  test_metadata.py  test_render.py  test_scanner.py  test_shortcodes.py  test_sync.py
