[project]
name = "static-gallery"
version = "0.1.0"
description = "A simple static site generator written in Python."
readme = "README.md"
authors = [
    { name = "Brian Van Horne", email = "code@brianvanhorne.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1",
    "mistletoe>=1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
]

[project.scripts]
gallery = "static_gallery:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
